--- a/Angular/appTiempo/package.json
+++ b/Angular/appTiempo/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.4",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
